crates/biome_cli/tests/snapshots/main_cases_css_parsing/check_combined_css_parser_flags.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --css-parse-css-modules=true --css-parse-tailwind-directives=true file.module.css
```

## `file.module.css`

```css
@import "tailwindcss";
.className {
  composes: other from "./other.module.css";
}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.module.css format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - @import·'tailwindcss';
    2   │ - .className·{·composes:·other·from·'./other.module.css';·}
      1 │ + @import·"tailwindcss";
      2 │ + .className·{
      3 │ + → composes:·other·from·"./other.module.css";
      4 │ + }
      5 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
