crates/biome_cli/tests/snapshots/main_cases_css_parsing/check_css_parse_css_modules_false.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --css-parse-css-modules=false file.module.css
```

## `file.module.css`

```css
.className {
  composes: other from "./other.module.css";
}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.module.css:1:14 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × `composes` declaration is not a standard CSS feature.
  
  > 1 │ .className { composes: other from './other.module.css'; }
      │              ^^^^^^^^
  
  i You can enable `composes` declaration parsing by setting the `css.parser.cssModules` option to `true` in your configuration file.
  

```

```block
file.module.css format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Code formatting aborted due to parsing errors. To format code with errors, enable the 'formatter.formatWithErrors' option.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
