crates/biome_cli/tests/snapshots/main_cases_css_parsing/check_css_parse_respects_config_tailwind_directives.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check file.css
```

## `biome.json`

```json
{
  "css": {
    "parser": {
      "tailwindDirectives": true
    }
  }
}
```

## `file.css`

```css
@import "tailwindcss";
.foo {
  color: red;
}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.css format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - @import·'tailwindcss';
    2   │ - .foo·{·color:·red;·}
      1 │ + @import·"tailwindcss";
      2 │ + .foo·{
      3 │ + → color:·red;
      4 │ + }
      5 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
