crates/biome_cli/tests/snapshots/main_cases_css_parsing/check_css_parser_flags_override_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --css-parse-css-modules=true file.module.css
```

## `biome.json`

```json
{
  "css": {
    "parser": {
      "cssModules": false
    }
  }
}
```

## `file.module.css`

```css
.className {
  composes: other from "./other.module.css";
}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.module.css format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - .className·{·composes:·other·from·'./other.module.css';·}
      1 │ + .className·{
      2 │ + → composes:·other·from·"./other.module.css";
      3 │ + }
      4 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
