crates/biome_cli/tests/snapshots/main_cases_css_parsing/ci_css_parse_css_modules_true.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome ci --css-parse-css-modules=true file.module.css
```

## `file.module.css`

```css
.className {
  composes: other from "./other.module.css";
}
```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.module.css format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × File content differs from formatting output
  
    1   │ - .className·{·composes:·other·from·'./other.module.css';·}
      1 │ + .className·{
      2 │ + → composes:·other·from·"./other.module.css";
      3 │ + }
      4 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
